# potato-bot-2

./: .gitignore  Cargo.toml  start.sh
.cargo/: config.toml
src/: azalea_avoid_chat_kick.rs  azalea_bridge.rs  azalea_discord_bridge.rs  bevy_discord.rs  bevy_matrix.rs  main.rs
