[package]
name = "potato-bot-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
azalea = { git="https://github.com/mat-1/azalea" }
dotenv = "0.15.0"
env_logger = "0.10.0"
parking_lot = "0.12.1"
serenity = { version = "0.11.5", default-features = false, features = ["builder", "cache", "chrono", "client", "gateway", "model", "http", "utils", "rustls_backend"] }
tokio = { version = "1.23.0", features = ["full"] }
