[package]
edition = "2021"
name = "potato-bot-2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-compat = "0.2.1"
azalea = { git = "https://github.com/mat-1/azalea" }
# azalea = { path = "../azalea/azalea" }
bevy_tasks = "0.10.0"
dotenv = "0.15.0"
futures-lite = "1.12.0"
log = "0.4.17"
matrix-sdk = "0.6.2"
parking_lot = "0.12.1"
tokio = { version = "1.23.0", features = ["full"] }
twilight-cache-inmemory = "0.15.0"
twilight-gateway = "0.15.0"
twilight-http = "0.15.0"
twilight-model = "0.15.0"
twilight-validate = "0.15.0"

# [profile.dev]
# opt-level = 1
# [profile.dev.package."*"]
# opt-level = 3
